--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="service.html">
+        <a href="projects.html">
           Read More
         </a>
       </div>
@@ -297,7 +297,7 @@
       </div>
       <!-- Button inside the portfolio_container -->
       <div class="btn-box">
-        <a href="portfolio.html">
+        <a href="interests.html">
           Read More
         </a>
       </div>
@@ -468,7 +468,7 @@
           <p>
             Experienced in leading advanced computer vision projects for autonomous navigation. Specialized in developing deep learning models, including YOLO and CNNs, for real-time obstacle avoidance, path planning, and 3D spatial understanding via depth estimation. Skilled in optimizing algorithms and collaborating to ensure robust system performance in dynamic environments.
           </p>
-          <a href="about.html">
+          <a href="resume.html">
             View Full Resume
           </a>
         </div>
